Fix excessive memory consumption in FFmpegDemuxer

Previously FFmpegDemuxer would release all unnecessary audio/video
streams. But with multi-track support unused a/v streams are disabled
instead of being released. So now we need to exclude disabled streams
in FFmpegDemuxer::StreamsHaveAvailableCapacity, otherwise it will
always return true (since disabled streams always have available
capacity), causing FFmpegDemuxer memory usage to grow unbounded.

BUG=740138

Change-Id: I4f2c990232a01988f66ff475bbb8b9970aff742f
Reviewed-on: https://chromium-review.googlesource.com/572231
Commit-Queue: Sergey Volk <servolk@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486957}
Former-commit-id: e08f39a041f2b288403fa7c36ee43f5afe89c5c7